--- a/index.html
+++ b/index.html
@@ -1,18 +1,27 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do Liste</title>
 
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-   
-    
-
-
-
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <div class="continer">
+      <header>
+        <h1>To Do Liste</h1>
+        <button class="add-task">
+          <i class="fa-solid fa-plus">Add Task</i>
+        </button>
+      </header>
+    </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
