--- a/index.html
+++ b/index.html
@@ -18,9 +18,43 @@
       <header>
         <h1>To Do Liste</h1>
         <button class="add-task">
-          <i class="fa-solid fa-plus">Add Task</i>
+          <i class="fa-solid fa-plus"></i>
         </button>
       </header>
+
+      <div id="task-modal" class="modal">
+        <div class="modal-content">
+          <span class="close-modal">&times;</span>
+          <h2 class="modal-title">AJouter une tâche</h2>
+          <form class="task-form">
+            <input type="hidden" id="task-id" />
+            <div class="form-group">
+              <label for="task-title">Titre</label>
+              <input type="text" id="task-title" required />
+            </div>
+            <div class="form-group">
+              <label for="task-description">Description</label>
+              <textarea
+                id="task-description"
+                placeholder="Description"
+              ></textarea>
+            </div>
+            <div class="form-group">
+              <label for="task-color">Couleur</label>
+              <select id="task-color">
+                <option value="green">Vert</option>
+                <option value="blue">Bleu</option>
+                <option value="purple">Violet</option>
+                <option value="orange">Orange</option>
+                <option value="pink">Rose</option>
+              </select>
+            </div>
+            <div class="form-actions">
+              <button type="submit" class="save-btn">Enregistrer</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
