--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do Liste</title>
-
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
   </head>
   <body>
@@ -21,12 +24,14 @@
           <i class="fa-solid fa-plus"></i>
         </button>
       </header>
-
+      <main>
+        <div id="task-container" class="task-container"></div>
+      </main>
       <div id="task-modal" class="modal">
         <div class="modal-content">
           <span class="close-modal">&times;</span>
-          <h2 class="modal-title">AJouter une tâche</h2>
-          <form class="task-form">
+          <h2 id="modal-title">Ajouter une tâche</h2>
+          <form id="task-form">
             <input type="hidden" id="task-id" />
             <div class="form-group">
               <label for="task-title">Titre</label>
@@ -56,6 +61,7 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="models.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
